<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Liste" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:src="@drawable/books"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txtTitreSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="170dp"
        android:text="Je Recherche"
        android:textColor="#ED2468"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNomRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="24dp"
        android:hint="nom et prenoms"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPhoneRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="24dp"
        android:hint="Numero de téléphone"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextEmailRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="24dp"
        android:hint="Email"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPaysRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="24dp"
        android:hint="Pays"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtDescriptionRecherche"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="10dp"
        android:gravity="top"
        android:hint="Description"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnSoumettreSearch"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="550dp"
        android:text="Soumettre" />


</RelativeLayout>