<resources>
    <string name="app_name">dons-fournitures</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_account_title">Mon compte</string>
    <string name="phone_vide">Numéro de téléphone est vide.</string>
    <string name="phone_non_valide">Numéro de téléphone est non valide.</string>
    <string name="nom_vide">Ajouter votre nom.</string>
    <string name="nom_non_valide">Nom est non valide.</string>
    <string name="ville_vide">La ville est vide.</string>
    <string name="ville_non_valide">La ville est non valide.</string>
    <string name="email_vide">Ajouter votre email.</string>
    <string name="email_nom_valide">email est non valide.</string>
    <string name="pays_vide">Ajouter votre pays.</string>
    <string name="pays_non_valide">pays est non valide.</string>
    <string name="description_vide">Ajouter les fournitures recherchés.</string>
    <string name="description_non_valide">fourniture est non valide.</string>
    <string name="information_valide">Votre recherche a été ajouter avec success.</string>
    <string name="information_non_valide">impossible d"ajouter la recherche.</string>
    <string name="message_vide">entrez votre message.</string>
    <string name="message_valide">Votre message a été envoyé.</string>

</resources>